--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,8 +33,9 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./
+          source: ./docs/
           destination: ./_site
+          theme_name: just-the-docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
 
