--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           source: ./docs/
           destination: ./_site
-          theme_name: just-the-docs
+          remote_theme: just-the-docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
 
