--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,17 @@
 title: "K-MOOC Docs"
 remote_theme: just-the-docs/just-the-docs
+
+back_to_top: true
+back_to_top_text: "Back to top"
+
+# Footer last edited timestamp
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%b %e %Y, %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+
+callouts:
+  important:
+    color: yellow
+  success:
+    color: green
+  warning:
+    color: red
